Fixing word wrapping on song light box

--- a/web/app/user/sass/components/_lightbox.scss
+++ b/web/app/user/sass/components/_lightbox.scss
@@ -162,8 +162,9 @@
     margin-top: 20px;
     color: #999;
     width: 95%;
-    padding-left: 237px;
-    padding-right: 239px;
+    padding-left: 300px;
+    padding-right: 225px;
+    text-align:center;
     .creditBox {
         display: inline-block;
         padding: 0 10px;
